# Eye-Tracker

./: .gitignore  Cargo.toml  README.md
Client Code/Raspi to File/: client_raspividstream2file_tcp  client_raspividstream2file_udp  convert_H264_to_MP4  readme
Client Code/Raspi to OpenCV/: readme
Client Code/Raspi to OpenCV/Framework/src/: main.cpp
Client Code/Raspi to Video Player/: readme
Framework/: readme
Framework/src/: .main.cxx.swp
Framework_old/: CMakeLists.txt
Framework_old/src/: main.cxx
Others/Scripts_old/: H264_sender.sh  H264_test_receiver.sh  motionjpeg_receiver.sh  motionjpeg_receiver_fps.sh  motionjpeg_sender.sh  motionjpeg_sender_timestamped.sh
Raspivid_Client_Framework/: CMakeLists.txt  readme
Raspivid_Scripts/: H2642MP4  client_raspividstream  client_raspividstream2file  client_raspividstream2file_udp  client_raspividstream_preset  client_raspividstream_preset_udp  readme
Scripts/: H264_receiver.sh  H264_receiver_fps.sh  motionjpeg_test_receiver.sh  readme
Scripts_old/: H264_sender_improved.sh  H264_sender_timestamped.sh
Server Code/: stream_tcp  stream_udp
src/: main.rs
src/canny/cl/cpu/: gaussian_kernel.cl  hysteresis_kernel.cl  non_max_suppression_kernel.cl  sobel_kernel.cl
src/canny/cl/gpu/: gaussian_kernel.cl  (+3 more)
src/contour_detection/: contour.rs  contour_follower.rs  contour_processor.rs  direction.rs  mod.rs  shape.rs
src/gui/: mod.rs
src/image_loader/: mod.rs
src/opencl/: canny_edge_detection.rs  ellipse_detect.rs  imgproc.rs  info.rs  mod.rs
src/streamer/: dummy_streamer.rs  mod.rs  webcam_stream.rs
(+14 files in other folders)
