[package]
name = "ocl-canny-rs"
version = "0.0.1"
authors = ["Mark Boss <markboss@mailbox.org>"]

[features]
default = ["camera_support"]
camera_support = ["camera_capture"]
use_dummy_streamer = []

[dependencies]
image = "0.14.0"
ocl = "0.14.1"
find_folder = "0.3.0"
time = "0.1"
camera_capture = { version = "0.3.0", optional = true }
piston_window = "0.67.0"
piston-texture = "0.5.0"
fps_counter = "0.2.0"
rayon = "0.8.1"